# deal-qual-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  preprompt.txt  pyproject.toml
backend/: __init__.py
backend/adapters/: __init__.py
backend/adapters/llm/: __init__.py  gigachat_adapter.py  local_hf_adapter.py
backend/adapters/persistence/: __init__.py  in_memory_event_repo.py  in_memory_fact_repo.py  in_memory_read_model_repo.py  mappers.py  orm_models.py  postgres_fact_repo.py  postgres_read_model_repo.py  postgres_snapshot_repo.py  sql_event_repo.py  sql_fact_repo.py  sql_read_model_repo.py  unit_of_work.py
backend/adapters/sse/: __init__.py  broadcaster.py
backend/app/: __init__.py  di.py  main.py
backend/application/: __init__.py
backend/config/: __init__.py  settings.py
backend/db/: __init__.py  alembic.ini  schema.sql
backend/domain/: __init__.py  entities.py  errors.py  rules.py  value_objects.py
backend/pipelines/: __init__.py  extract_llm.py  reasoner_llm.py  recompute_steps.py
backend/ports/: __init__.py  clock.py  llm_client.py  repositories.py  unit_of_work.py
backend/prompts/: __init__.py
backend/schemas/: __init__.py  events.py  facts.py  read_model.py  reasoner.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/utils/: __init__.py  hashing.py  idempotency.py  typing.py
docker/: Dockerfile.backend  Dockerfile.ui
scripts/: __init__.py  check_lengths.py  seed_demo_data.py
ui/: __init__.py  app.py
ui/components/: __init__.py  deal_panel.py  gates_report.py
(+47 files in other folders)
