[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-qual-assistant"
version = "0.1.0"
description = "FastAPI backend and Streamlit UI for deal qualification assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "INNO Team" }]
dependencies = [
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.24,<0.32",
    "pydantic>=2.4,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "streamlit>=1.30,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "black>=24.8,<25.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.8,<2.0",
    "httpx>=0.27,<0.28",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*", "ui", "ui.*", "scripts"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

